--- a/SOF306-Test-1/src/main/resources/application.properties
+++ b/SOF306-Test-1/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=PTPM_FINALLY_JAVA_SOF306
+spring.datasource.username=sa 
+spring.datasource.password=123
+spring.jpa.show-sql=true
