--- a/SOF306 Test 1/pom.xml
+++ b/SOF306 Test 1/pom.xml
@@ -34,9 +34,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
